<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="143dp"
        android:layout_height="165dp"
        android:src="@drawable/selfie" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_name" />

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/facts_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facts_about" />

    <TextView
        android:id="@+id/birthplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthplace" />

    <TextView
        android:id="@+id/where_i_live_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_i_live_now" />

    <TextView
        android:id="@+id/where_i_want_to_live"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/where_i_want_to_live" />

    <TextView
        android:id="@+id/sig_other"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sig_other" />

    <TextView
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday" />

    <Button
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToWeather"
        android:text="@string/button_weather" />

    <Button
        android:id="@+id/portfolio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToPortfolio"
        android:text="@string/button_portfolio" />

    <Button
        android:id="@+id/resume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToResume"
        android:text="@string/button_resume" />
</LinearLayout>

